RTL support for collapse triangle. Refs bug #20934

--- a/jquery/jquery.thread_collapse.css
+++ b/jquery/jquery.thread_collapse.css
@@ -10,5 +10,5 @@
 }
 .thread-collapse-control a.thread-control-collapsed {
 	/* @embed */
-	background: url(../images/thread_collapse_control_collapsed.gif) 0 0 no-repeat;
+	background: url(../images/thread_collapse_control_collapsed-ltr.gif) 0 0 no-repeat;
 }
